# SO-II

./: .gitignore  .travis.yml
nachos-3.4/code/: CMakeLists.txt  Makefile.common
nachos-3.4/code/machine/: mipssim.cc  network.h  stats.cc  stats.h  translate.cc
nachos-3.4/code/test/: CMakeLists.txt  Makefile  busy.c  cat.c  cp.c  minilib.c  minilib.h  ortest.c  printargs.c  shell.c  tlbstress.c
nachos-3.4/code/threads/: list.h  system.cc  system.h  thread.cc  thread.h
nachos-3.4/code/userprog/: Makefile  addrspace.cc  addrspace.h  bitmap.cc  exception.cc  processtable.cc  processtable.h  progtest.cc  synchconsole.cc  synchconsole.h  syscall.h
nachos-3.4/code/vm/: Makefile  coremap.cc  coremap.h  memaccess.cc  memaccess.h
planchas/: plancha-4.txt
